# block-explorer

./: .gitignore  README.md  default.nix  flake.nix  makeLinks  shell.nix.save
.github/workflows/: nix.yml
.obelisk/impl/: github.json
backend/: backend.cabal
backend/src/: Backend.hs
backend/src-bin/: cwdata.hs
common/: common.cabal
common/src/: PactNumber.hs
common/src/ChainwebApi/Types/: Base64Url.hs  BlockHeader.hs  BlockHeaderTx.hs  BlockPayload.hs  ChainTip.hs  ChainwebMeta.hs  Cut.hs  MinerData.hs  PactCommand.hs  Payload.hs  RespItems.hs  Sig.hs  Signer.hs  Transaction.hs
common/src/ChainwebDb/Types/: Block.hs  DbHash.hs  Header.hs  Miner.hs  PubKey.hs  Transaction.hs
common/src/Common/: Api.hs  Route.hs  Types.hs  Utils.hs
config/frontend/: data-backends
flake/: copy-assets.sh  evalTimeDependencies.nix
frontend/: frontend.cabal
frontend/src/: Blake2Native.hs  Frontend.hs
frontend/src/Frontend/: About.hs  Accounts.hs  App.hs  AppState.hs  ChainwebApi.hs  Common.hs  Nav.hs  Storage.hs  Transactions.hs  Transfer.hs
frontend/src/Frontend/Page/: Block.hs  Common.hs  ReqKey.hs  Transaction.hs  TxDetail.hs  Types.hs
frontend/src/Reflex/Dom/: EventSource.hs
static/: about.html  chains-3d.html
static/css/: custom.css
