name: backend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  if impl(ghcjs)
    buildable: False
  build-depends:
      base
    , common
    , dependent-sum
    , frontend
    , mtl
    , obelisk-backend
    , obelisk-route
    , snap-core
  exposed-modules:
    Backend
  ghc-options: -Wall

executable backend
  main-is: main.hs
  hs-source-dirs: src-bin
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , backend
               , common
               , frontend
               , obelisk-backend

--executable chainweb-data
--  main-is: cwdata.hs
--  hs-source-dirs: src-bin
--  if impl(ghcjs)
--    buildable: False
--  build-depends: base
--               , common
