name: common
version: 0.1
cabal-version: >= 1.2
build-type: Simple

library
  hs-source-dirs: src
  build-depends:
      aeson
    , base
    , bytestring
    , base16-bytestring
    , base64-bytestring
    , containers
    , dependent-sum
    , errors
    , hashable
    , lens
    , lens-aeson
    , obelisk-executable-config-lookup
    , obelisk-route
    , mtl
    , readable
    , reflex-dom
    , text
    , time
    , unordered-containers
  default-extensions:
    TypeFamilies
    PolyKinds
  exposed-modules:
    ChainwebApi.Types.Base64Url
    ChainwebApi.Types.BlockHeader
    ChainwebApi.Types.BlockHeaderTx
    ChainwebApi.Types.BlockPayload
    ChainwebApi.Types.BytesLE
    ChainwebApi.Types.ChainTip
    ChainwebApi.Types.ChainwebMeta
    ChainwebApi.Types.Common
    ChainwebApi.Types.Cut
    ChainwebApi.Types.Hash
    ChainwebApi.Types.MinerData
    ChainwebApi.Types.PactCommand
    ChainwebApi.Types.Payload
    ChainwebApi.Types.RespItems
    ChainwebApi.Types.Sig
    ChainwebApi.Types.Signer
    ChainwebApi.Types.Transaction
    Common.Api
    Common.Route
    Common.Types
    Common.Utils
