name: common
version: 0.1
cabal-version: >= 1.2
build-type: Simple

library
  hs-source-dirs: src
  build-depends:
      aeson
    , base
    , bytestring
    , base16-bytestring
    , base64-bytestring
    , chainweb-api
    , containers
    , dependent-sum
    , errors
    , hashable
    , lens
    , lens-aeson
    , obelisk-executable-config-lookup
    , obelisk-route
    , mtl
    , readable
    , reflex-dom
    , text
    , time
    , unordered-containers
  default-extensions:
    TypeFamilies
    PolyKinds
  exposed-modules:
    Common.Api
    Common.Route
    Common.Types
    Common.Utils
