name: frontend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  build-depends:
      aeson
    , base
    , base16-bytestring
    , base64-bytestring
    , bytes
    , bytestring
    , cereal
    , chainweb-api
    , common
    , containers
    , data-default
    , dependent-sum
    , formattable
    , ghcjs-dom
    , hashable
    , jsaddle
    , lens
    , lens-aeson
    , mtl
    , obelisk-executable-config-lookup
    , obelisk-frontend
    , obelisk-generated-static
    , obelisk-route
    , perfect-vector-shuffle
    , readable
    , ref-tf
    , reflex
    , reflex-dom
    , reflex-dom-core
    , stm
    , text
    , time
    , transformers
    , unordered-containers
    , vector
  exposed-modules:
    Blake2Native
    Frontend
    Frontend.About
    Frontend.App
    Frontend.AppState
    Frontend.Common
    Frontend.ChainwebApi
    Frontend.Nav
    Frontend.Page.Block
    Frontend.Page.Transaction
    Frontend.Storage
    Reflex.Dom.EventSource
    Reflex.Dom.EventSource.Foreign
  ghc-options: -Wall

  if impl(ghcjs)
    build-depends:
      ghcjs-base

executable frontend
  main-is: main.hs
  hs-source-dirs: src-bin
  build-depends: base
               , common
               , obelisk-frontend
               , obelisk-route
               , reflex-dom
               , obelisk-generated-static
               , frontend
  --TODO: Make these ghc-options optional
  ghc-options: -threaded
  if os(darwin)
     ghc-options: -dynamic
