name: frontend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  build-depends:
      aeson
    , aeson-pretty
    , array
    , base
    , base16-bytestring
    , base64-bytestring
    , bytes
    , bytestring
    , cereal
    , chainweb-api
    , common
    , containers
    , data-default
    , dependent-sum
    , formattable
    , ghcjs-dom
    , hashable
    , jsaddle
    , lens
    , lens-aeson
    , mtl
    , obelisk-executable-config-lookup
    , obelisk-frontend
    , obelisk-generated-static
    , obelisk-route
    , pact
    , perfect-vector-shuffle
    , readable
    , ref-tf
    , reflex
    , reflex-dom
    , reflex-dom-core
    , scientific
    , servant
    , servant-reflex
    , stm
    , text
    , time
    , transformers
    , unordered-containers
    , vector
  exposed-modules:
    Blake2Native
    Frontend
    Frontend.About
    Frontend.Accounts
    Frontend.App
    Frontend.AppState
    Frontend.Common
    Frontend.ChainwebApi
    Frontend.Nav
    Frontend.Page.Block
    Frontend.Page.Common
    Frontend.Page.ReqKey
    Frontend.Page.Transaction
    Frontend.Page.TxDetail
    Frontend.Page.Types
    Frontend.Storage
    Frontend.Transfer
    Frontend.Transactions
    Reflex.Dom.EventSource
    Reflex.Dom.EventSource.Foreign
  ghc-options: -O2 -Wall -fno-show-valid-hole-fits

  if impl(ghcjs)
    build-depends:
      ghcjs-base

executable frontend
  main-is: main.hs
  hs-source-dirs: src-bin
  build-depends: base
               , common
               , obelisk-frontend
               , obelisk-route
               , reflex-dom
               , obelisk-generated-static
               , frontend
  --TODO: Make these ghc-options optional
  ghc-options: -O2 -threaded -fno-show-valid-hole-fits
  if impl(ghcjs)
    ghc-options: -dedupe
    cpp-options: -DGHCJS_BROWSER
  if os(darwin)
    ghc-options: -dynamic
